--- a/ipynb/Eval-Inference.ipynb
+++ b/ipynb/Eval-Inference.ipynb
@@ -119,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,6 +246,16 @@
    "source": [
     "latest_checkpoint_path = \"/home/karan/Checkpoint/ckpt-49\"\n",
     "# latest_checkpoint_path = tf.train.latest_checkpoint(\"/home/karan/Checkpoint/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"\":\n",
+    "    print(\"okay\")"
    ]
   },
   {
@@ -733,7 +745,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
